# Berry3D

./: .gitignore  Berry3D  CMakeLists.txt  README.md  lines.py  main.cpp
include/: BMPLoader.h  Berry3D.h  Bitmap.h  camera.h  color.h  cube.h  cylinder.h  draws.h  imageLoader.h  item.h  lights.h  loader.h  material.h  math.h  objLoader.h  plane.h  scene.h  shader.h  timestamp.h
src/: BMPLoader.cpp  Berry3D.cpp  Bitmap.cpp  camera.cpp  imageLoader.cpp  lights.cpp  loader.cpp  math.cpp  objLoader.cpp
